...
    func get(_ key: Key) -> String {
        read(account: key.rawValue) ?? ""
    }

    func set(_ key: Key, value: String) {
        if value.isEmpty {
            delete(account: key.rawValue)
        } else {
            save(account: key.rawValue, value: value)
        }
    }

    func hasValue(_ key: Key) -> Bool {
...
